--- a/MLR_Bike_Sharing_Assignment.ipynb
+++ b/MLR_Bike_Sharing_Assignment.ipynb
@@ -3682,27 +3682,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 311,
    "id": "e7853952-c6d0-4f03-afe6-2b0415bc4298",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['const', 'season_Summer', 'season_Winter', 'mnth_Jul', 'mnth_Sep',\n",
+       "       'weathersit_Light Snow & Rain', 'yr', 'holiday', 'temp', 'hum',\n",
+       "       'windspeed'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 311,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_test.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 310,
    "id": "0a989aed-eb24-46a9-9245-a49bae00ef05",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['season_Summer', 'season_Winter', 'mnth_Jul', 'mnth_Sep',\n",
+       "       'weathersit_Light Snow & Rain', 'yr', 'holiday', 'temp', 'hum',\n",
+       "       'windspeed'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 310,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_train_rfe.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 307,
    "id": "add3165a-3765-414d-8f2c-71e2bba7102c",
    "metadata": {
     "id": "add3165a-3765-414d-8f2c-71e2bba7102c"
@@ -3715,20 +3743,271 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 312,
    "id": "d8be2506-ccfe-4467-965b-9d4761d7b0ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "184    0.436808\n",
+       "535    0.926253\n",
+       "299    0.415521\n",
+       "221    0.619534\n",
+       "152    0.654074\n",
+       "         ...   \n",
+       "702     0.67977\n",
+       "127    0.509656\n",
+       "640    0.849994\n",
+       "72     0.285019\n",
+       "653    0.722235\n",
+       "Length: 220, dtype: object"
+      ]
+     },
+     "execution_count": 312,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_test_pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 313,
    "id": "49c15034-f08f-4183-83c6-f71deac34c2f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>const</th>\n",
+       "      <th>season_Summer</th>\n",
+       "      <th>season_Winter</th>\n",
+       "      <th>mnth_Jul</th>\n",
+       "      <th>mnth_Sep</th>\n",
+       "      <th>weathersit_Light Snow &amp; Rain</th>\n",
+       "      <th>yr</th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>hum</th>\n",
+       "      <th>windspeed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>184</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.831783</td>\n",
+       "      <td>0.657364</td>\n",
+       "      <td>0.084219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>535</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.901354</td>\n",
+       "      <td>0.610133</td>\n",
+       "      <td>0.153728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.511964</td>\n",
+       "      <td>0.837699</td>\n",
+       "      <td>0.334206</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>221</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.881625</td>\n",
+       "      <td>0.437098</td>\n",
+       "      <td>0.339570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.817246</td>\n",
+       "      <td>0.314298</td>\n",
+       "      <td>0.537414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>702</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.519232</td>\n",
+       "      <td>0.756118</td>\n",
+       "      <td>0.283397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>127</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.584649</td>\n",
+       "      <td>0.650923</td>\n",
+       "      <td>0.069510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>640</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.745598</td>\n",
+       "      <td>0.817947</td>\n",
+       "      <td>0.052115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.331557</td>\n",
+       "      <td>0.512107</td>\n",
+       "      <td>0.203418</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>653</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.509887</td>\n",
+       "      <td>0.575354</td>\n",
+       "      <td>0.300794</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>220 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     const  season_Summer  season_Winter  mnth_Jul  mnth_Sep  \\\n",
+       "184    1.0          False          False      True     False   \n",
+       "535    1.0           True          False     False     False   \n",
+       "299    1.0          False           True     False     False   \n",
+       "221    1.0          False          False     False     False   \n",
+       "152    1.0           True          False     False     False   \n",
+       "..     ...            ...            ...       ...       ...   \n",
+       "702    1.0          False           True     False     False   \n",
+       "127    1.0           True          False     False     False   \n",
+       "640    1.0          False           True     False     False   \n",
+       "72     1.0          False          False     False     False   \n",
+       "653    1.0          False           True     False     False   \n",
+       "\n",
+       "     weathersit_Light Snow & Rain  yr  holiday      temp       hum  windspeed  \n",
+       "184                         False   0        1  0.831783  0.657364   0.084219  \n",
+       "535                         False   1        0  0.901354  0.610133   0.153728  \n",
+       "299                         False   0        0  0.511964  0.837699   0.334206  \n",
+       "221                         False   0        0  0.881625  0.437098   0.339570  \n",
+       "152                         False   0        0  0.817246  0.314298   0.537414  \n",
+       "..                            ...  ..      ...       ...       ...        ...  \n",
+       "702                         False   1        0  0.519232  0.756118   0.283397  \n",
+       "127                         False   0        0  0.584649  0.650923   0.069510  \n",
+       "640                         False   1        0  0.745598  0.817947   0.052115  \n",
+       "72                          False   0        0  0.331557  0.512107   0.203418  \n",
+       "653                         False   1        0  0.509887  0.575354   0.300794  \n",
+       "\n",
+       "[220 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 313,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_test"
    ]
@@ -3747,7 +4026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 314,
    "id": "d43873f1-cbf5-4d00-9922-25f7ef606d4a",
    "metadata": {
     "colab": {
@@ -3756,7 +4035,16 @@
     "id": "d43873f1-cbf5-4d00-9922-25f7ef606d4a",
     "outputId": "5a4ab093-951f-4fd7-f135-0c4bf55a5dbc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r2_score of train dataset 0.8322741185753386\n",
+      "r2_score of test dataset 0.8038201600802428\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import r2_score\n",
     "print('r2_score of train dataset', r2_score(y_train, y_train_pred))\n",
@@ -3765,10 +4053,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 315,
    "id": "0a6058c5-59b8-452b-ba2b-0ce363a5e5bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of y_test: 220\n",
+      "Length of y_test_pred: 220\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Length of y_test: {len(y_test)}\")\n",
     "print(f\"Length of y_test_pred: {len(y_test_pred)}\")"
@@ -3776,13 +4073,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 321,
    "id": "004b1f64-06de-4319-94a4-9aa7b77209f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "The feature names should match those that were passed during fit.\nFeature names unseen at fit time:\n- const\nFeature names seen at fit time, yet now missing:\n- atemp\n- mnth_Aug\n- mnth_Dec\n- mnth_Feb\n- mnth_Jan\n- ...\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[321], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m X_test_rfe \u001b[38;5;241m=\u001b[39m sm\u001b[38;5;241m.\u001b[39madd_constant(X_test_rfe)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Make predictions\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m y_test_pred \u001b[38;5;241m=\u001b[39m lm\u001b[38;5;241m.\u001b[39mpredict(X_test_rfe)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\anaconda3\\Lib\\site-packages\\sklearn\\linear_model\\_base.py:354\u001b[0m, in \u001b[0;36mLinearModel.predict\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    340\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpredict\u001b[39m(\u001b[38;5;28mself\u001b[39m, X):\n\u001b[0;32m    341\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    342\u001b[0m \u001b[38;5;124;03m    Predict using the linear model.\u001b[39;00m\n\u001b[0;32m    343\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    352\u001b[0m \u001b[38;5;124;03m        Returns predicted values.\u001b[39;00m\n\u001b[0;32m    353\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 354\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_decision_function(X)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\anaconda3\\Lib\\site-packages\\sklearn\\linear_model\\_base.py:337\u001b[0m, in \u001b[0;36mLinearModel._decision_function\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    334\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_decision_function\u001b[39m(\u001b[38;5;28mself\u001b[39m, X):\n\u001b[0;32m    335\u001b[0m     check_is_fitted(\u001b[38;5;28mself\u001b[39m)\n\u001b[1;32m--> 337\u001b[0m     X \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_data(X, accept_sparse\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcsr\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcsc\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcoo\u001b[39m\u001b[38;5;124m\"\u001b[39m], reset\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m    338\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m safe_sparse_dot(X, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcoef_\u001b[38;5;241m.\u001b[39mT, dense_output\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m) \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mintercept_\n",
+      "File \u001b[1;32m~\\AppData\\Local\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:548\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[1;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[0;32m    483\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_validate_data\u001b[39m(\n\u001b[0;32m    484\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[0;32m    485\u001b[0m     X\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mno_validation\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    489\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mcheck_params,\n\u001b[0;32m    490\u001b[0m ):\n\u001b[0;32m    491\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Validate input data and set or check the `n_features_in_` attribute.\u001b[39;00m\n\u001b[0;32m    492\u001b[0m \n\u001b[0;32m    493\u001b[0m \u001b[38;5;124;03m    Parameters\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    546\u001b[0m \u001b[38;5;124;03m        validated.\u001b[39;00m\n\u001b[0;32m    547\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 548\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_feature_names(X, reset\u001b[38;5;241m=\u001b[39mreset)\n\u001b[0;32m    550\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m y \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_tags()[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrequires_y\u001b[39m\u001b[38;5;124m\"\u001b[39m]:\n\u001b[0;32m    551\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    552\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThis \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m estimator \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    553\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrequires y to be passed, but the target y is None.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    554\u001b[0m         )\n",
+      "File \u001b[1;32m~\\AppData\\Local\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:481\u001b[0m, in \u001b[0;36mBaseEstimator._check_feature_names\u001b[1;34m(self, X, reset)\u001b[0m\n\u001b[0;32m    476\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m missing_names \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m unexpected_names:\n\u001b[0;32m    477\u001b[0m     message \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m    478\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFeature names must be in the same order as they were in fit.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    479\u001b[0m     )\n\u001b[1;32m--> 481\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(message)\n",
+      "\u001b[1;31mValueError\u001b[0m: The feature names should match those that were passed during fit.\nFeature names unseen at fit time:\n- const\nFeature names seen at fit time, yet now missing:\n- atemp\n- mnth_Aug\n- mnth_Dec\n- mnth_Feb\n- mnth_Jan\n- ...\n"
+     ]
+    }
+   ],
    "source": [
     "# Ensure X_test_rfe is correctly derived\n",
-    "X_test_rfe = X_test[selected_features]\n",
+    "\n",
+    "X_test_rfe = X_test\n",
     "X_test_rfe = sm.add_constant(X_test_rfe)\n",
     "\n",
     "# Make predictions\n",
